--- a/product-list-with-cart-main/index.html
+++ b/product-list-with-cart-main/index.html
@@ -14,7 +14,7 @@
 
     <title>Frontend Mentor | Product list with cart</title>
     <link href="dist/output.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
@@ -28,10 +28,8 @@
     </style>
   </head>
   <body style="font-family: 'RedHatText', sans-serif">
-    <div
-      class="w-[90%] flex justify-between items-start bg-rose-50 gap-10 text-[16px] p-16 mx-auto"
-    >
-      <section class="left-content w-3/5 flex justify-center flex-col">
+    <div class="main-container">
+      <section class="section-left">
         <h1 class="p-4 text-[30px] font-[800]">Desserts</h1>
         <div class="list-products" id="list-products">
           <!-- <div class="my-4">
@@ -48,11 +46,11 @@
               <p class="text-orangestyle font-[700]">$78</p>
             </div>
           </div>-->
-        </div> 
+        </div>
       </section>
 
-      <section class="w-2/5 p-6 h-auto self-start">
-        <h1 class="text-orangestyle font-[900] ">
+      <section class="section-right">
+        <h1 class="text-orangestyle font-[900]">
           You Cart (<span id="number-products">0</span>)
         </h1>
 
@@ -77,7 +75,7 @@
         </div> -->
         </div>
 
-        <hr>
+        <hr />
         <div id="calculatePrice" class="hidden order-total">
           <div class="flex justify-between items-center">
             <p class="text-rose-900">Order Total</p>
@@ -97,23 +95,41 @@
           </button>
         </div>
       </section>
-
     </div>
 
     <section id="order-confirmation" class="order-confirmation">
+      <!-- blanco -->
       <div class="order-confirmation__content">
         <img src="assets/images/icon-order-confirmed.svg" alt="" />
         <h2>Order Confirmed</h2>
-        <p>We hope you enjoy your food </p>
-        <div id="order-list-confirmation">
-          
-          <p>Total</p>
+        <p>We hope you enjoy your food</p>
+
+        <!--rose-->
+        <div id="confirmed-list-products" class="confirmed-list-products">
+          <!-- <div class="order-list">
+            <div class="order-list__image">
+              <img
+                src="assets/images/image-baklava-desktop.jpg"
+              />
+            </div>
+            <div class="order-list__description">
+              <p>Waffle with Berries</p>
+              <p>x5</p>
+              <p>$6.50</p>
+            </div>
+            <div class="order-list__subtotal">
+              <p>$13.00</p>
+            </div>
+          </div> -->
         </div>
-  
-        <butto class="order-confirmation__button">Start New Order</button>
 
+        <div class="order-confirmation__total">
+          <p>Order Total:</p>
+          <p id="priceOrder"></p>
+        </div>
+
+        <button class="order-confirmation__button">Start New Order</button>
       </div>
-
     </section>
 
     <div class="attribution">
