responsive product-list

--- a/product-list-with-cart-main/index.html
+++ b/product-list-with-cart-main/index.html
@@ -104,31 +104,35 @@
         <h2>Order Confirmed</h2>
         <p>We hope you enjoy your food</p>
 
+        <div class="container-list-total">
+          <div id="confirmed-list-products" class="confirmed-list-products">
+            <!-- <div class="order-list">
+              <div class="order-list__image">
+                <img
+                  src="assets/images/image-baklava-desktop.jpg"
+                />
+              </div>
+              <div class="order-list__description">
+                <p>Waffle with Berries</p>
+                <p>x5</p>
+                <p>$6.50</p>
+              </div>
+              <div class="order-list__subtotal">
+                <p>$13.00</p>
+              </div>
+            </div> -->
+          </div>
+  
+          <div class="order-confirmation__total">
+            <p>Order Total:</p>
+            <p id="priceOrder"></p>
+          </div>
+        </div>
         <!--rose-->
-        <div id="confirmed-list-products" class="confirmed-list-products">
-          <!-- <div class="order-list">
-            <div class="order-list__image">
-              <img
-                src="assets/images/image-baklava-desktop.jpg"
-              />
-            </div>
-            <div class="order-list__description">
-              <p>Waffle with Berries</p>
-              <p>x5</p>
-              <p>$6.50</p>
-            </div>
-            <div class="order-list__subtotal">
-              <p>$13.00</p>
-            </div>
-          </div> -->
-        </div>
+        <div class="order-confirmation__button-container">
+          <button class="order-confirmation__button">Start New Order</button>
 
-        <div class="order-confirmation__total">
-          <p>Order Total:</p>
-          <p id="priceOrder"></p>
         </div>
-
-        <button class="order-confirmation__button">Start New Order</button>
       </div>
     </section>
 
