--- a/huddle-landing-page-with-single-introductory-section-master/index.html
+++ b/huddle-landing-page-with-single-introductory-section-master/index.html
@@ -23,9 +23,9 @@
 
     <link rel="stylesheet" href="src/output.css" />
   </head>
-  <body class="bg-violet bg-mobile grid place-content-center">
+  <body class="bg-violet bg-mobile grid place-content-center lg:bg-cover font-open-sans ">
 
-    <section class="w-[304px] my-[38px] lg:w-[1100px] lg:my-10">
+    <section class="w-[304px] my-[38px] lg:w-[1000px] lg:my-10">
       <img class="w-[120px] mb-[70px] lg:w-[200px]" src="assets/images/logo.svg" alt="" />
       <div class="lg:flex lg:gap-10  ">
         <div class="mb-[60px]">
@@ -33,7 +33,7 @@
         </div>
           
         <div class="text-white text-center lg:mt-5">
-          <h1 class="text-2lg mb-4 font-poppins font-semibold lg:text-4lg lg:text-left lg:w-[480px] lg:mx-auto lg:leading-[1.5] ">Build The Community Your Fans Will Love</h1>
+          <h1 class="text-2lg mb-4 font-poppins font-semibold lg:text-4xl lg:text-left lg:w-[480px] lg:mx-auto lg:leading-[1.5] ">Build The Community Your Fans Will Love</h1>
 
           <p class="mb-6 lg:w-[480px] lg:text-left lg:text-base lg:leading-[1.4] ">
             Huddle re-imagines the way we build communities. You have a voice, but
@@ -41,7 +41,7 @@
             engage in genuine discussion.
           </p>
           <div class="lg:flex lg:justify-start">
-            <button class="bg-white w-60 text-violet px-10 py-3 rounded-full font-poppins font-semibold cursor-pointer hover:bg-soft-magenta hover:text-white transition-all duration-300 shadow-lg lg:w-48" >Register</button>  
+            <button class="bg-white w-60 text-violet px-10 py-3 rounded-full font-poppins font-semibold cursor-pointer hover:bg-soft-magenta hover:text-white transition-colors duration-300 shadow-lg lg:w-48" >Register</button>  
           </div>
 
 
@@ -49,17 +49,17 @@
 
             <ul class="flex place-content-center gap-4 mt-16 lg:mt-32 lg: mr-12 ">
               <li class="">
-                <a class="block border-2 border-white size-7 rounded-full hover:text-soft-magenta hover:border-soft-magenta transition-all duration-300" href="#">
+                <a class="flex justify-center items-center p-4 border-2 border-white size-7 rounded-full hover:text-soft-magenta hover:border-soft-magenta transition-all duration-300" href="#">
                   <i class="fa-brands fa-facebook-f"></i>
                 </a>
               </li>
               <li class="">
-                <a class="block border-2 border-white size-7 rounded-full hover:text-soft-magenta hover:border-soft-magenta transition-all duration-300" href="#">
+                <a class="flex justify-center items-center p-4 border-2 border-white size-7 rounded-full hover:text-soft-magenta hover:border-soft-magenta transition-all duration-300" href="#">
                   <i class="fa-brands fa-twitter"></i>
                 </a>
               </li>
               <li class="">
-                <a class="block border-2 border-white size-7 rounded-full hover:text-soft-magenta hover:border-soft-magenta transition-all duration-300" href="#">
+                <a class="flex justify-center items-center p-4 border-2 border-white size-7 rounded-full hover:text-soft-magenta hover:border-soft-magenta transition-all duration-300" href="#">
                   <i class="fa-brands fa-instagram"></i>
                 </a>
               </li>
