--- a/single-price-grid-component-master/index.html
+++ b/single-price-grid-component-master/index.html
@@ -19,22 +19,17 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     <style type="text/tailwindcss">
-      @theme {
-        --color-cyan: hsl(179, 62%, 43%);
-        --color-cyan-light: hsl(179, 62%, 46%);
-        --color-bright-yellow: hsl(71, 73%, 54%);
-        --color-light-gray: hsl(204, 43%, 93%);
-        --color-grayish-blue: hsl(218, 22%, 67%);
-      }
+      
 
       @font-face {
         font-family: "karla";
-        src: url("./assets/karla/static/Karla-Regular.ttf") format("truetype");
-        font-weight: 400;
+        src: url("./assets/karla/Karla-VariableFont_wght.ttf") format("truetype");
+        font-weight: 400 700;
         font-style: normal;
         font-display: swap;
       }
 
+      /*
       @font-face {
         font-family: "karla";
         src: url("./assets/karla/static/Karla-Bold.ttf") format("truetype");
@@ -42,16 +37,27 @@
         font-style: normal;
         font-display: swap;
       }
+        */
+
+        @theme {
+        --color-cyan: hsl(179, 62%, 43%);
+        --color-cyan-light: hsl(179, 62%, 46%);
+        --color-bright-yellow: hsl(71, 73%, 54%);
+        --color-light-gray: hsl(204, 43%, 93%);
+        --color-grayish-blue: hsl(218, 22%, 67%);
+
+        --font-karla: "karla", sans-serif;
+      }
     </style>
   </head>
-  <body class="bg-light-gray">
-    <div class="flex justify-center items-center h-[100vh]">
+  <body class="bg-light-gray ">
+    <div class="flex justify-center items-center h-[100vh] my-10 font-karla">
       <main
         class="text-[16px] w-full max-w-[300px] mx-auto rounded-lg overflow-hidden lg:max-w-[500px]"
       >
         <!-- left section -->
         <section class="left p-6 rounded-t-lg bg-white">
-          <h1 class="text-cyan font-bold mb-5">Join our community</h1>
+          <h2 class="text-cyan font-bold mb-5 lg:text-2xl" >Join our community</h2>
           <h2 class="text-bright-yellow mb-5 font-medium leading-[1.2] lg:mb-3">
             30-day, hassle-free money back guarantee
           </h2>
@@ -69,7 +75,7 @@
           <div class="flex flex-col pb-4 p-6 bg-cyan ">
             <h2 class="text-white mb-3 font-semibold">Monthly Subscription</h2>
             <div class="flex items-center text-white gap-2 font-bold">
-              <span class="text-3xl">$29</span>
+              <span class="text-3xl flex gap-0"><span>&dollar;</span> 29</span>
               <span class="font-normal ml-1 text-light-gray text-[12px]"
                 >per month</span
               >
